--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
 pandas~=1.5.2
 Flask~=2.2.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 SQLAlchemy~=1.4.44
+WTForms==3.0.1
+Werkzeug==2.2.2
+click==8.1.3
+colorama==0.4.6
+greenlet==2.0.1
+gunicorn==20.1.0
+itsdangerous==2.1.2
+numpy==1.24.1
+pip==21.3.1
+python-dateutil==2.8.2
+pytz==2022.7
+setuptools==60.2.0
+six==1.16.0
+wheel==0.37.1
